Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,6 @@
-----
-Introduction to LaunchPulse
-
-Meet LaunchPulse, the multi-agent platform and cloud runtime that turns product briefs into live, full-stack web apps.
+---
+title: "Introduction"
+description: "Meet LaunchPulse, the multi-agent platform and cloud runtime that turns product briefs into live, full-stack web apps."
 ---
 
 # Introduction to LaunchPulse
@@ -10,16 +9,16 @@ LaunchPulse is your **AI software team + runtime platform** in the browser.
 
 You describe the product you want to ship, and LaunchPulse:
 
-- Plans it like a product squad  
-- Builds it like an engineering team  
-- Tests it like a QA department  
-- Hosts it like a managed cloud platform  
+- Plans it like a product squad
+- Builds it like an engineering team
+- Tests it like a QA department
+- Hosts it like a managed cloud platform
 
 All inside a single, integrated system.
 
 <Check>
-Want to see it end-to-end?  
-<strong><a href="/quickstart">Follow the Quickstart guide with a real idea as you read this page.</a></strong>
+  Want to see it end-to-end?\
+  <strong><a href="/quickstart">Follow the Quickstart guide with a real idea as you read this page.</a></strong>
 </Check>
 
 ---
@@ -51,16 +50,13 @@ The result feels less like “I asked for some code” and more like:
 At the very top of LaunchPulse is a simple box:
 
 <Frame>
-  <img
-    src="/images/intro-idea-box.png"
-    alt="LaunchPulse idea input box with example templates for food delivery, fitness platform, and real estate"
-  />
+  ![LaunchPulse idea input box with example templates for food delivery, fitness platform, and real estate](/Screenshot2025-11-12at23.13.40.png)
 </Frame>
 
 You describe your idea in natural language - as detailed as you like. Behind that input sits the rest of the system:
 
-- A **Product & UX layer** that turns your description into specs and flows  
-- An **Engineering layer** of agents that compile those specs into code, APIs, and schemas  
+- A **Product & UX layer** that turns your description into specs and flows
+- An **Engineering layer** of agents that compile those specs into code, APIs, and schemas
 - An **Infrastructure layer** (LaunchPulse Cloud) that runs the app, manages data, and exposes a live URL
 
 You focus on the idea and the outcome. LaunchPulse orchestrates everything between.
@@ -75,8 +71,8 @@ Conceptually, LaunchPulse is three tightly connected layers.
 
 This is where your idea becomes something the system can build.
 
-- Product Manager, UX, and architecture agents create PRDs, FRDs, DRDs, and BRDs.  
-- Requirements, edge cases, and non-functional constraints are captured up front.  
+- Product Manager, UX, and architecture agents create PRDs, FRDs, DRDs, and BRDs.
+- Requirements, edge cases, and non-functional constraints are captured up front.
 - This documentation becomes the source of truth for downstream agents.
 
 ### 2. App assembly layer
@@ -84,26 +80,23 @@ This is where your idea becomes something the system can build.
 This is the “AI team” people usually see - but running on top of that shared brain.
 
 <Frame>
-  <img
-    src="/images/intro-structure-overview.png"
-    alt="LaunchPulse structure overview graph showing CEO, Product Manager, UX, Frontend, Backend, and Database agents"
-  />
+  ![LaunchPulse structure overview graph showing CEO, Product Manager, UX, Frontend, Backend, and Database agents](/Screenshot2025-11-14at21.04.48.png)
 </Frame>
 
-- Frontend, Backend, Database, API Architect, and Ops agents work from the same spec.  
-- Code, schemas, and APIs are generated as a single coherent system.  
-- Validation agents keep checking: *does this still match the spec?*
+- Frontend, Backend, Database, API Architect, and Ops agents work from the same spec.
+- Code, schemas, and APIs are generated as a single coherent system.
+- Validation agents keep checking: _does this still match the spec?_
 
 ### 3. Cloud runtime layer
 
 Once the app is assembled, it has somewhere to live — **LaunchPulse Cloud**.
 
-- Managed hosting for your frontend and backend  
-- Managed database attached to your project  
-- Domains, certificates, and auth wired in  
+- Managed hosting for your frontend and backend
+- Managed database attached to your project
+- Domains, certificates, and auth wired in
 - Browser QA and monitoring integrated into the same UI
 
-You don’t jump between a model, GitHub, a database dashboard, and a cloud console.  
+You don’t jump between a model, GitHub, a database dashboard, and a cloud console.\
 It’s one environment.
 
 ---
@@ -115,23 +108,17 @@ It’s one environment.
 Every project ships with a fully managed database that grows with your app.
 
 <Frame>
-  <img
-    src="/images/intro-database-overview.png"
-    alt="LaunchPulse database tab showing tables list and a menu_categories table with editable rows"
-  />
+  ![LaunchPulse database tab showing tables list and a menu_categories table with editable rows](/Screenshot2025-11-13at06.21.54.png)
 </Frame>
 
-- Tables and schemas are generated by the Database Agent.  
-- You can browse, filter, edit, and add rows directly from the **Database** tab.  
+- Tables and schemas are generated by the Database Agent.
+- You can browse, filter, edit, and add rows directly from the **Database** tab.
 - No separate DB provisioning, connection strings, or migrations to set up manually.
 
 For quick fixes or demos, you can even click into a cell and update data inline — ideal for testing flows.
 
 <Frame>
-  <img
-    src="/images/intro-database-edit.png"
-    alt="LaunchPulse database view showing how to edit a booking row and add rows"
-  />
+  ![LaunchPulse database view showing how to edit a booking row and add rows](/Screenshot2025-11-13at23.45.50.png)
 </Frame>
 
 ---
@@ -141,14 +128,11 @@ For quick fixes or demos, you can even click into a cell and update data inline 
 When agents finish a build, your app is already runnable.
 
 <Frame>
-  <img
-    src="/images/intro-preview-app.png"
-    alt="LaunchPulse preview tab showing a barbershop booking app and Live Application status"
-  />
+  ![LaunchPulse preview tab showing a barbershop booking app and Live Application status](/Screenshot2025-11-13at23.37.13.png)
 </Frame>
 
-- Use the **Preview** tab to interact with the latest build without deploying.  
-- Click **View App** to open the live preview in a new window.  
+- Use the **Preview** tab to interact with the latest build without deploying.
+- Click **View App** to open the live preview in a new window.
 - See exactly what users will experience before you press Deploy.
 
 ---
@@ -158,14 +142,11 @@ When agents finish a build, your app is already runnable.
 Authentication isn’t an afterthought. LaunchPulse creates real accounts and roles for you.
 
 <Frame>
-  <img
-    src="/images/intro-test-users.png"
-    alt="LaunchPulse sidebar showing a list of test users with emails, passwords, and copy buttons"
-  />
+  ![LaunchPulse sidebar showing a list of test users with emails, passwords, and copy buttons](/Screenshot2025-11-14at18.10.41.png)
 </Frame>
 
-- Built-in signups, logins, and password resets.  
-- Test users generated automatically, visible in the left sidebar.  
+- Built-in signups, logins, and password resets.
+- Test users generated automatically, visible in the left sidebar.
 - Copy credentials and log in as different user types to test flows quickly.
 
 This lets you validate permissions, dashboards, and role-specific flows before inviting real users.
@@ -177,14 +158,11 @@ This lets you validate permissions, dashboards, and role-specific flows before i
 On top of normal validation, LaunchPulse can actively **use your app** to test it.
 
 <Frame>
-  <img
-    src="/images/intro-qa-testing.png"
-    alt="LaunchPulse structure overview with an AI Testing Your App panel showing tests passing and running"
-  />
+  ![LaunchPulse structure overview with an AI Testing Your App panel showing tests passing and running](/Screenshot2025-11-07at23.47.07.png)
 </Frame>
 
-- A self-testing browser agent navigates through key flows.  
-- It captures runtime errors, broken journeys, and layout issues.  
+- A self-testing browser agent navigates through key flows.
+- It captures runtime errors, broken journeys, and layout issues.
 - Results feed back into the build pipeline so agents can fix issues in context.
 
 Instead of stopping at “it compiles,” LaunchPulse pushes toward **“it behaves correctly for real users.”**
@@ -195,9 +173,9 @@ Instead of stopping at “it compiles,” LaunchPulse pushes toward **“it beha
 
 LaunchPulse is built for people who care about shipping real products, not just demos:
 
-- **Founders & solo entrepreneurs** launching serious MVPs without assembling a full dev team.  
-- **Agencies & freelancers** delivering more client projects without scaling headcount linearly.  
-- **Product & growth teams** running experiments with production-grade foundations.  
+- **Founders & solo entrepreneurs** launching serious MVPs without assembling a full dev team.
+- **Agencies & freelancers** delivering more client projects without scaling headcount linearly.
+- **Product & growth teams** running experiments with production-grade foundations.
 - **Developers** who want to offload boilerplate while keeping control over critical logic.
 
 If you can describe the product clearly, LaunchPulse can give you a live app with infrastructure you’re not embarrassed to show to users (or other engineers).
@@ -208,18 +186,18 @@ If you can describe the product clearly, LaunchPulse can give you a live app wit
 
 LaunchPulse focuses on **multi-feature, full-stack apps** rather than single-page experiments:
 
-- SaaS dashboards and admin panels  
-- Booking and scheduling platforms  
-- Marketplaces and listing platforms  
-- Internal tools and operational dashboards  
+- SaaS dashboards and admin panels
+- Booking and scheduling platforms
+- Marketplaces and listing platforms
+- Internal tools and operational dashboards
 - Customer portals, tenant portals, or partner portals
 
 Typical builds include:
 
-- Responsive frontend with navigation, forms, dashboards, and onboarding flows  
-- Backend APIs, business logic, auth, and background tasks  
-- Database schemas wired to the app’s flows  
-- Built-in pages like terms, privacy, and basic policy content  
+- Responsive frontend with navigation, forms, dashboards, and onboarding flows
+- Backend APIs, business logic, auth, and background tasks
+- Database schemas wired to the app’s flows
+- Built-in pages like terms, privacy, and basic policy content
 - Dozens of features in a single coordinated build, depending on your brief
 
 ---
@@ -241,6 +219,7 @@ Use the rest of the docs to go deeper into each layer:
 </CardGroup>
 
 <Check>
-<strong><a href="/quickstart">Ready to see the infrastructure in action?</a></strong>  
-Start a new project, describe a real idea, and watch LaunchPulse build, test, and host the app for you.
+  <strong><a href="/quickstart">Ready to see the infrastructure in action?</a></strong>
+  \
+  Start a new project, describe a real idea, and watch LaunchPulse build, test, and host the app for you.
 </Check>
