Documentation edits made through Mintlify web editor

--- a/agents.mdx
+++ b/agents.mdx
@@ -200,7 +200,7 @@ That’s what lets LaunchPulse deliver complex, production-grade apps in one go,
 </Steps>
 
 <Check>
-  [<strong><a href="/dashboard">Start your first agent-powered build now.</a></strong>
-  ](https://launchpulse.ai/)\
+  [Start your first agent-powered build now.
+  ](https://www.launchpulse.ai/)\
   Give the agents a real idea, and see how far they can take it in a single run.
 </Check>
