Update navigation, colors, and rename files: What is LaunchPulse? and Quickstart

--- a/Quickstart: ship your first app.mdx
+++ b/Quickstart: ship your first app.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quickstart
+title: "Quickstart: ship your first app"
 description: Turn your idea into a production-ready web app with a single prompt in LaunchPulse.
 ---
 
