--- a/What is LaunchPulse?.mdx
+++ b/What is LaunchPulse?.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Introduction"
+title: "What is LaunchPulse?"
 description: "Meet LaunchPulse, the multi-agent platform and cloud runtime that turns product briefs into live, full-stack web apps."
 ---
 
-# Introduction to LaunchPulse
+# Introduction to LaunchPulse 
 
 LaunchPulse is your **AI software team + runtime platform** in the browser.
 
