Documentation edits made through Mintlify web editor

--- a/QA Agent.mdx
+++ b/QA Agent.mdx
@@ -9,12 +9,14 @@
     Navigates your app in a real browser, filling forms, clicking buttons, and following links the way a real user would.
   </Card>
   <Card title="Finds & fixes issues" icon="bug">
-    Logs broken flows, passes them back to build agents, and keeps re-testing until the issue is actually fixed. 
+    Logs broken flows, passes them back to build agents, and keeps re-testing until the issue is actually fixed.
   </Card>
   <Card title="Runs on every build" icon="refresh-ccw">
     Attach QA runs to your build flow so every new app version is actively tested before you share it with users.
   </Card>
 </Columns>
+
+/
 
 ---
 
@@ -41,6 +43,8 @@ Most “AI builders” stop at _it compiled_. LaunchPulse keeps going:
 </Columns>
 
 ---
+
+![Screenshot2025 12 03at22 22 53 Pn](/images/Screenshot2025-12-03at22.22.53.png)
 
 ## How a QA run works
 
@@ -111,7 +115,11 @@ Each test also shows how many **attempts** the system has made to fix it, so you
 While a run is in progress, the sidebar shows QA’s to-do list:
 
 - **Completed tests** – flows the agent has already finished running
+
+  ![Screenshot2025 12 03at22 23 16 Pn](/images/Screenshot2025-12-03at22.23.16.png)
 - **Upcoming tests** – flows that are queued next
+
+  ![Screenshot2025 12 03at22 30 51 Pn](/images/Screenshot2025-12-03at22.30.51.png)
 - **Current action** – a short note like “filling checkout form” or “verifying password reset email”
 
 Keeping this panel open once or twice helps you build intuition for how QA sees your app.
