Documentation edits made through Mintlify web editor

--- a/QA Agent.mdx
+++ b/QA Agent.mdx
@@ -16,8 +16,6 @@
   </Card>
 </Columns>
 
-/
-
 ---
 
 ## Why this QA Agent is different
@@ -127,6 +125,8 @@ Keeping this panel open once or twice helps you build intuition for how QA sees 
 ---
 
 ## Examples of flows QA covers
+
+![Screenshot2025 12 03at22 27 31 Pn](/images/Screenshot2025-12-03at22.27.31.png)
 
 Some typical scenarios the QA Agent generates and maintains for you:
 
