Documentation edits made through Mintlify web editor

--- a/QA Agent.mdx
+++ b/QA Agent.mdx
@@ -1,5 +1,7 @@
 # Hire the tester that reads code, clicks buttons, and never sleeps.
 
+![Title The QA Agent Your Always On,self Healing Test Engineer Visual Style Amodern,cleaninfographicwithadigital,interconnectedaesthetic Useacolorpaletteofblues,purples,andgreensf Pn](/images/TitleTheQAAgentYourAlways-On,Self-HealingTestEngineerVisualStyleAmodern,cleaninfographicwithadigital,interconnectedaesthetic.Useacolorpaletteofblues,purples,andgreensf.png)
+
 <Info>
   The QA Agent is your always-on test engineer. It opens your app in a real browser, clicks around like a user, and pushes fixes back to the agents – all without you writing a single test script.
 </Info>
