Add contact support section with Callout component to troubleshooting page

--- a/troubleshooting.mdx
+++ b/troubleshooting.mdx
@@ -267,5 +267,29 @@ LaunchPulse is built to offset those risks with:
 
 <Check>
 <strong><a href="/dashboard">Open your project, run through a key user flow, and start a troubleshooting iteration.</a></strong>  
-The more you pair LaunchPulse’s speed with these practices, the more “AI-built” will still feel “production-grade”.
+The more you pair LaunchPulse's speed with these practices, the more "AI-built" will still feel "production-grade".
 </Check>
+
+<Callout title="Need more help?">
+
+  If you ever run into something unexpected, feel stuck, or simply want to share
+
+  feedback, you can always reach us at <b>info@launchpulse.ai</b>.
+
+  We genuinely value every message. LaunchPulse is built <b>with</b> our community,
+
+  not just for it — your insights directly shape how the platform evolves.
+
+  We're committed to giving you the best possible experience and we work closely
+
+  with builders, founders, and teams to help them ship successful applications.
+
+  You're not navigating this alone.
+
+  <b>When you grow, we grow with you.</b>  
+
+  Together, we're building a community of creators who push what's possible —
+
+  one successful app at a time.
+
+</Callout>
