Documentation edits made through Mintlify web editor

--- a/troubleshooting.mdx
+++ b/troubleshooting.mdx
@@ -267,9 +267,9 @@ LaunchPulse is built to offset those risks with:
 
   We’re committed to giving you the best possible experience and we work closely with builders, founders, and teams to help them ship successful applications. You’re not navigating this alone.
 
-  **When you grow, we grow with you.  **
+  **\*\*When you grow, we grow with you.  \*\***
 
-  Together, we’re building a community of creators who push what’s possible —
+  Together, we’re building a community of creators who push what’s possible -
 
   one successful app at a time.
 </Info>
